# ResearchProjectML

./: .gitignore  CMakeLists.txt  clustering_instance.hpp  clustering_problem.hpp  clustering_problem.tpp  instances.cpp  instances.hpp  main.cpp  min_cut.cpp  min_cut.hpp  planes.csv  plotting.py  points.csv  process.py  readme.md  seeds.txt  space.cpp  space.hpp  utuple.hpp  utuple.tpp
presentation/: .gitignore  algo.puml  conclusion.tex  data10_of_noise.csv  data15_of_noise.csv  data7_of_noise.csv  data_of_noise.csv  data_of_size.csv  data_time.csv  diff_c.csv  experiments.tex  instance.tex  intro.tex  macros.tex  main.tex  notes.txt  partial.tex  refs.bib  results.tex  same_c.csv
